<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars = "vertical"
    tools:context=".DangNhapActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="239dp"
            android:layout_height="185dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            app:srcCompat="@drawable/lg" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_dang_nhap_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/taikhoan"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_dang_nhap_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/matkhau"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login_btn_dang_nhap_activity"
            android:layout_width="264dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@drawable/border_item"
            android:gravity="center"
            android:text="@string/dangnhap"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar_dang_nhap_activity"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:id="@+id/btn_quen_mat_khau_dang_nhap_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="center"
            android:text="@string/fogetpass"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_dang_ky_dang_nhap_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="center"
            android:text="@string/dangky"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login_phone_dang_nhap_activity"
            android:layout_width="264dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@drawable/border_item"
            android:drawableLeft="@drawable/icon_phone"
            android:gravity="center"
            android:text="@string/loginwithphone"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login_google_dang_nhap_activity"
            android:layout_width="264dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@drawable/border_item"
            android:drawableLeft="@drawable/icon_google"
            android:paddingRight="30dp"
            android:text="@string/loginwithgoogle"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

</LinearLayout>