<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".DangKyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/txt_view_dang_ky_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Đăng Ký"
            android:textColor="@color/colorPrimary"
            android:textSize="26dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_dang_ky_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/hovaten"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="246dp"
                android:layout_height="match_parent"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_date_dang_ky_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/dateofbirth"
                    android:inputType="date"
                    android:text=""
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/button_date_dang_ky_activity"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_calendar_foreground" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/RGroup_dang_ky_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới tính"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rdb_nam_dang_ky_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Nam"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdb_nu_dang_ky_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Nữ"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdb_khac_dang_ky_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Khác"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="49dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:inputType=""
                android:maxLength="10"
                android:text="+84"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_dang_ky_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="9"
                    android:text=""
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_dang_ky_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_dang_ky_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="Mật khẩu"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conf_password_dang_ky_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="Nhập lại mật khẩu"
                android:inputType="textPassword"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_otp_dang_ky_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="Đăng ký"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_space2_dang_ky_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="@string/facebookLink"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/btn_dang_nhap_dang_ky_activity"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="Đã đăng ký ? Đăng nhập"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar_dang_ky_activity"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>